--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -83,7 +83,8 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
+            dbCreate: update
+            #dbCreate: create-drop
             url: jdbc:jtds:sqlserver://localhost:1433/appdb;instance=sqlexpress;user=sa;password=root
             #url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
