--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,3 +1,4 @@
+
 ---
 grails:
     profile: web
@@ -72,7 +73,7 @@ hibernate:
         use_second_level_cache: true
         use_query_cache: false
         region.factory_class: 'org.hibernate.cache.ehcache.EhCacheRegionFactory' 
-        
+
 dataSource:
     pooled: true
     jmxExport: true
@@ -115,3 +116,6 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+server:
+    'contextPath': '/newapp'
