--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -86,7 +86,7 @@ environments:
         dataSource:
             dbCreate: update
             #dbCreate: create-drop
-            url: jdbc:jtds:sqlserver://localhost:1433/appdb;instance=sqlexpress;user=sa;password=root
+            url: jdbc:jtds:sqlserver://localhost:1433/appdb;instance=mssqlserver14;user=sa;password=root
             #url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
